--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "1.0.0",
     "description": "Generates HTML resumes from JSON files.",
     "scripts": {
-        "build:en": "cp resumes/en.json build/resume.json && resume export build/en.html --format html --theme jsonresume-theme-cora --resume resumes/en.json",
-        "build:fr": "cp resumes/fr.json build/resume.json && resume export build/fr.html --format html --theme jsonresume-theme-cora --resume resumes/fr.json"
+        "build:en": "mkdir -p build && cp -r resumes/logos build/logos && cp resumes/en.json build/resume.json && resume export build/en.html --format html --theme jsonresume-theme-cora --resume resumes/en.json",
+        "build:fr": "mkdir -p build && cp -r resumes/logos build/logos && cp resumes/fr.json build/resume.json && resume export build/fr.html --format html --theme jsonresume-theme-cora --resume resumes/fr.json"
     },
     "dependencies": {
         "jsonresume-theme-cora": "github:ndreno/jsonresume-theme-cora",
